Add local mode start documentation (#131)

--- a/README.html
+++ b/README.html
@@ -195,6 +195,8 @@ reasonable defaults; specifying them is optional.  For more information
 on the available options, run <code>yarn create-manifest -h</code> in a terminal
 window.  Note that you can edit the JSON file to make changes or
 adjustments.</p>
+<p>After having created a suitable manifest, you can launch the rig in local mode using <code>yarn start -l manifest.json</code></p>
+
 <h3 id="using-the-run-list-in-the-rig">Using the Run List in the Rig</h3>
 <p>The foundation of Local Mode is a JSON document called the &quot;Run List&quot;.  It provides developers the ability to trigger specific callback responses through the Extensions Helper Library. To your extension, it will appear like these have come from Twitch Extension APIs.</p>
 <p>When you get the Local Mode edition of the rig, it will contain a Run List pre-populated with mock responses.  You'll be able to alter these responses by directly editing the document.</p>
