--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <script src="%COORDINATOR_URL%"></script>
+    <script id="coordinatorScriptElement" src="https://extension-files.twitch.tv/coordinator/7.18.2/extension-coordinator.umd.js"></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/dc.ico">
     <!--
