Remove the extension manifest from local storage (#178)
* Wrap coordinator injection code in an IIFE

* Rename an extension frame data field for clarity

* Add iconUrls field to ExtensionObject class

* Remove the extension manifest from local storage

This will more easily allow updating the manifest.

--- a/public/extension-frame.html
+++ b/public/extension-frame.html
@@ -3,10 +3,12 @@
 <head>
     <link rel="stylesheet" type="text/css" href="extension-frame.css" />
     <script>
-        const coordinatorUrl = window.frameElement.attributes.getNamedItem('coordinatorUrl');
-        const el = document.createElement('script');
-        el.src = coordinatorUrl.value;
-        document.head.appendChild(el);
+        (function() {
+            const coordinatorUrl = window.frameElement.attributes.getNamedItem('coordinatorUrl');
+            const el = document.createElement('script');
+            el.src = coordinatorUrl.value;
+            document.head.appendChild(el);
+        })();
     </script>
     <script src="extension-frame.js"></script>
 </head>
